[gd_scene load_steps=20 format=3 uid="uid://4uvg1b2unkyd"]

[ext_resource type="Script" uid="uid://e8d1qrww7kv8" path="res://MapEditor/Parts/map_editor.gd" id="1_prvuo"]
[ext_resource type="PackedScene" uid="uid://cv5d87efy2njo" path="res://MapEditor/GizmoManipulation/gizmo_manipulator.tscn" id="2_q4pck"]
[ext_resource type="Script" uid="uid://w7ilsy5pi3i8" path="res://Player/ghost_cam.gd" id="3_jrwax"]
[ext_resource type="Shader" uid="uid://d1cco51l6rfas" path="res://Assets/Shader/grid.gdshader" id="4_ov5y3"]
[ext_resource type="Texture2D" uid="uid://bodg331amvxxf" path="res://Assets/Images/UI/play.png" id="5_jrwax"]
[ext_resource type="Script" uid="uid://0pssxrtug78c" path="res://MapEditor/Parts/timeline.gd" id="5_lf0yh"]
[ext_resource type="Texture2D" uid="uid://cjqa4ajld0f0b" path="res://Assets/Images/UI/pause.png" id="6_ov5y3"]
[ext_resource type="Texture2D" uid="uid://bpiviso7nfgfy" path="res://Assets/Images/icon.svg" id="6_wjw6d"]
[ext_resource type="Script" uid="uid://rhyjgow2pmwl" path="res://MapEditor/Parts/selection_properties.gd" id="7_smuu6"]
[ext_resource type="PackedScene" uid="uid://8tt6gsuipabo" path="res://MapEditor/Parts/bpm_calculator.tscn" id="8_2wpdj"]
[ext_resource type="Script" uid="uid://xyknsaapsmkb" path="res://MapEditor/Parts/floating_text_manager.gd" id="11_ov5y3"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7xmfy"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_43ajp"]
sky_material = SubResource("ProceduralSkyMaterial_7xmfy")

[sub_resource type="Environment" id="Environment_kqkv5"]
sky = SubResource("Sky_43ajp")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="QuadMesh" id="QuadMesh_7xmfy"]
size = Vector2(10, 10)
orientation = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_43ajp"]
render_priority = 0
shader = ExtResource("4_ov5y3")
shader_parameter/subdivisions = 10.0
shader_parameter/grid_width = 0.01
shader_parameter/background_color = Color(0.2, 0.2, 0.2, 0.4)
shader_parameter/background_color_two = Color(0.101961, 0.101961, 0.101961, 0.580392)
shader_parameter/grid_color = Color(1, 1, 1, 0.388235)
shader_parameter/dashed_scale_x = 0.2
shader_parameter/dashed_scale_y = 0.2
shader_parameter/dashed_count_x = 2.0
shader_parameter/dashed_count_y = 2.0
shader_parameter/point_width = 0.021
shader_parameter/point_color = Color(0, 0, 0, 1)
shader_parameter/point_scale_x = 0.05
shader_parameter/point_scale_y = 0.05
shader_parameter/inside_width = 0.01
shader_parameter/inside_subdivisions = 6.0
shader_parameter/inside_color = Color(0.4, 0.4, 0.4, 1)
shader_parameter/in_dashed_scale_x = 0.3
shader_parameter/in_dashed_scale_y = 0.3
shader_parameter/in_dashed_count_x = 6.0
shader_parameter/in_dashed_count_y = 6.0

[sub_resource type="Animation" id="Animation_kqkv5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WorldEnvironment/DirectionalLight3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_43ajp"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WorldEnvironment/DirectionalLight3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.35, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kqkv5"]
_data = {
&"RESET": SubResource("Animation_kqkv5"),
&"new_animation": SubResource("Animation_43ajp")
}

[node name="MapEditor" type="Node3D" groups=["map_editor"]]
script = ExtResource("1_prvuo")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kqkv5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="gizmo_manipulator" parent="." instance=ExtResource("2_q4pck")]
unique_name_in_owner = true
process_mode = 4
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.319575, 1, 0)
visible = false

[node name="GhostCam" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("3_jrwax")

[node name="Cam" type="Camera3D" parent="GhostCam"]
unique_name_in_owner = true

[node name="Grid" type="MeshInstance3D" parent="."]
mesh = SubResource("QuadMesh_7xmfy")
surface_material_override/0 = SubResource("ShaderMaterial_43ajp")

[node name="EditorUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="EditorUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="EditorUI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="EditorUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EditPanel" type="PanelContainer" parent="EditorUI/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="EditorUI/VBoxContainer/VBoxContainer/EditPanel"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = -5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="EditorUI/VBoxContainer/VBoxContainer/EditPanel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="EditorUI/VBoxContainer/VBoxContainer/EditPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="EditorUI/VBoxContainer/VBoxContainer/EditPanel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35

[node name="Label" type="RichTextLabel" parent="EditorUI/VBoxContainer/VBoxContainer/EditPanel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"FancyLabel"
bbcode_enabled = true
text = "[font_size=30][color=black]edit tab"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="EditorUI/VBoxContainer/VBoxContainer/EditPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 35

[node name="SpawnTarget" type="Button" parent="EditorUI/VBoxContainer/VBoxContainer/EditPanel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "target"

[node name="SpawnGoal" type="Button" parent="EditorUI/VBoxContainer/VBoxContainer/EditPanel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "goal"

[node name="SpawnBPMGuide" type="Button" parent="EditorUI/VBoxContainer/VBoxContainer/EditPanel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "bpm guide"

[node name="SpawnBlock" type="Button" parent="EditorUI/VBoxContainer/VBoxContainer/EditPanel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "block"

[node name="SpawnRamp" type="Button" parent="EditorUI/VBoxContainer/VBoxContainer/EditPanel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "ramp"

[node name="TimelinePanel" type="PanelContainer" parent="EditorUI/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Label" type="RichTextLabel" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
bbcode_enabled = true
text = "[indent]Timeline"

[node name="Play" type="Button" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/Play"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextureRect" type="TextureRect" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/Play/MarginContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("5_jrwax")
stretch_mode = 5

[node name="Pause" type="Button" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/Pause"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextureRect" type="TextureRect" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/Pause/MarginContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("6_ov5y3")
stretch_mode = 5

[node name="TimeLabel" type="Label" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "0.00"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="TimelineSubViewportContainer" type="SubViewportContainer" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
script = ExtResource("5_lf0yh")

[node name="SubViewport" type="SubViewport" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/VBoxContainer/TimelineSubViewportContainer"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="Timeline" type="Control" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/VBoxContainer/TimelineSubViewportContainer/SubViewport"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Waveform" type="TextureRect" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/VBoxContainer/TimelineSubViewportContainer/SubViewport/Timeline"]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_right = 175.0
offset_bottom = 76.0
texture = ExtResource("6_wjw6d")
expand_mode = 1

[node name="WaveformEdge" type="TextureRect" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/VBoxContainer/TimelineSubViewportContainer/SubViewport/Timeline/Waveform"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -27.0
offset_right = 2.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("6_wjw6d")
expand_mode = 1

[node name="TimelineSlider" type="HSlider" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/VBoxContainer/TimelineSubViewportContainer/SubViewport/Timeline"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.348
offset_top = -4.0
offset_bottom = -4.008
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
theme_override_constants/grabber_offset = 8
step = 0.01
scrollable = false
tick_count = 100
ticks_on_borders = true

[node name="TimelineScrollbar" type="HScrollBar" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
page = 10.0

[node name="Control3" type="Control" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.02

[node name="VBoxContainer2" type="VBoxContainer" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="Control" type="Control" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="LengthEdit" type="LineEdit" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
virtual_keyboard_type = 3

[node name="RichTextLabel" type="RichTextLabel" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "duration"
fit_content = true

[node name="Control2" type="Control" parent="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.02

[node name="HBoxContainer" type="HBoxContainer" parent="EditorUI"]
layout_mode = 2
offset_left = 15.0
offset_top = 8.0
offset_right = 1167.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.0401426
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="File" type="Button" parent="EditorUI/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "file"

[node name="FileDropdown" type="VBoxContainer" parent="EditorUI/HBoxContainer/File"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 44.0
offset_right = 124.0
offset_bottom = 208.0

[node name="Save" type="Button" parent="EditorUI/HBoxContainer/File/FileDropdown"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "save"

[node name="SaveAs" type="Button" parent="EditorUI/HBoxContainer/File/FileDropdown"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "save as"

[node name="Load" type="Button" parent="EditorUI/HBoxContainer/File/FileDropdown"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "load"

[node name="UserFiles" type="Button" parent="EditorUI/HBoxContainer/File/FileDropdown"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "user files"

[node name="MainMenu" type="Button" parent="EditorUI/HBoxContainer/File/FileDropdown"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "to main menu"

[node name="Settings" type="Button" parent="EditorUI/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "settings"

[node name="SettingsDropdown" type="VBoxContainer" parent="EditorUI/HBoxContainer/Settings"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_top = 44.0
offset_right = 179.0
offset_bottom = 208.0

[node name="SongLabel" type="Label" parent="EditorUI/HBoxContainer/Settings/SettingsDropdown"]
unique_name_in_owner = true
layout_mode = 2
text = "song: null"

[node name="ChooseSong" type="Button" parent="EditorUI/HBoxContainer/Settings/SettingsDropdown"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "choose song"

[node name="Playtest" type="Button" parent="EditorUI/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "playtest"

[node name="SelectionProperties" type="PanelContainer" parent="EditorUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 106.0
offset_top = -45.0
offset_right = 307.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_smuu6")

[node name="MarginContainer" type="MarginContainer" parent="EditorUI/SelectionProperties"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="EditorUI/SelectionProperties/MarginContainer"]
layout_mode = 2

[node name="Name" type="HBoxContainer" parent="EditorUI/SelectionProperties/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Properties" type="RichTextLabel" parent="EditorUI/SelectionProperties/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_type_variation = &"FancyLabel"
theme_override_constants/line_separation = 6
bbcode_enabled = true
text = "[color=black][i]name
position
rotation
pop time"
fit_content = true

[node name="Control" type="Control" parent="EditorUI/SelectionProperties"]
layout_mode = 2
mouse_filter = 2

[node name="Anchor" type="Button" parent="EditorUI/SelectionProperties/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -59.0
offset_bottom = 31.0
grow_horizontal = 0
focus_mode = 0
text = "anchor"

[node name="Delete" type="Button" parent="EditorUI/SelectionProperties/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -136.0
offset_right = -77.0
offset_bottom = 31.0
grow_horizontal = 0
focus_mode = 0
text = "delete"

[node name="FileDialog" type="FileDialog" parent="EditorUI"]
unique_name_in_owner = true
title = "Open a File"
position = Vector2i(0, 36)
theme_override_colors/folder_icon_color = Color(1, 0.843137, 0.329412, 1)
theme_override_colors/file_icon_color = Color(1, 1, 1, 1)
theme_override_colors/file_disabled_color = Color(0, 0, 0, 1)
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[node name="BPMCalculator" parent="EditorUI" instance=ExtResource("8_2wpdj")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -148.0
offset_right = 74.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="FloatingTextManager" type="Control" parent="EditorUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -332.0
offset_top = -353.0
offset_right = 339.0
offset_bottom = -285.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("11_ov5y3")

[node name="GizmoBeatmap" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Geometry" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Beatmap" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kqkv5")
}

[connection signal="pressed" from="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="EditorUI/VBoxContainer/VBoxContainer/TimelinePanel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/Pause" to="." method="_on_pause_pressed"]

[editable path="EditorUI/BPMCalculator"]
